--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@ionic/angular": "^7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@popperjs/core": "^2.11.6",
+    "@types/intl-tel-input": "^18.1.0",
     "bootstrap": "^5.2.3",
+    "country-select-js": "^2.1.0",
+    "intl-tel-input": "^18.1.6",
     "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -32,6 +35,7 @@
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
     "@angular/localize": "^15.2.0",
+    "@types/country-select-js": "^1.0.2",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.5.0",
