--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "node_modules/intl-tel-input/build/css/intlTelInput.min.css"
+              "node_modules/intl-tel-input/build/css/intlTelInput.min.css",
+              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/bootstrap.css"
              
             ],
             "scripts": [
