--- a/angular.json
+++ b/angular.json
@@ -25,17 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css",
-              "node_modules/intl-tel-input/build/css/intlTelInput.min.css",
-              "src/assets/css/bootstrap.min.css",
-              "src/assets/css/bootstrap.css"
-             
-            ],
+           "src/styles.css",
+              "node_modules/intl-tel-input/build/css/intlTelInput.min.css"
+           ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.js",
-              "node_modules/jquery/dist/jquery.js",
-              "node_modules/country-select-js/build/js/countrySelect.min.js"
+           "node_modules/jquery/dist/jquery.js",
+            "node_modules/country-select-js/build/js/countrySelect.min.js"
               
             ]
           },
