--- a/angular.json
+++ b/angular.json
@@ -96,9 +96,18 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+             "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/intl-tel-input/build/css/intlTelInput.min.css",
+              "src/assets/css/bootstrap.min.css",
+              "src/assets/css/bootstrap.css"
+             
             ],
-            "scripts": []
+            "scripts": [
+             "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/country-select-js/build/js/countrySelect.min.js"
+              
+            ]
           }
         }
       }
