--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@emailjs/browser": "^3.11.0",
     "@ionic/angular": "^7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@popperjs/core": "^2.11.6",
     "@types/intl-tel-input": "^18.1.2",
     "bootstrap": "^5.2.3",
     "country-select-js": "^2.1.0",
+    "emailjs-com": "^3.2.0",
     "intl-tel-input": "^18.1.6",
     "jquery": "^3.7.0",
     "ngx-flag-picker": "^14.0.0",
