--- a/angular.json
+++ b/angular.json
@@ -26,10 +26,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css",
-              "src/assets/css/bootstrap.min.css",
-              "src/assets/css/bootstrap.css",
-              "node_modules/intl-tel-input/build/css/intlTelInput.css"
+              "src/styles.css","node_modules/intl-tel-input/build/css/intlTelInput.css"
            ],
             "scripts": [
             
