--- a/angular.json
+++ b/angular.json
@@ -16,25 +16,18 @@
             "outputPath": "dist/vrnl",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css","node_modules/intl-tel-input/build/css/intlTelInput.css"
-             
-           ],
+              "src/styles.css",
+              "node_modules/intl-tel-input/build/css/intlTelInput.css"
+            ],
             "scripts": [
-            
               "node_modules/jquery/dist/jquery.js",
               "node_modules/country-select-js/build/js/countrySelect.min.js"
-              
-              
+
             ]
           },
           "configurations": {
@@ -85,27 +78,19 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-             "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/intl-tel-input/build/css/intlTelInput.min.css",
               "src/assets/css/bootstrap.min.css",
               "src/assets/css/bootstrap.css"
-             
             ],
             "scripts": [
-             "node_modules/bootstrap/dist/js/bootstrap.js",
+              "node_modules/bootstrap/dist/js/bootstrap.js",
               "node_modules/jquery/dist/jquery.js",
               "node_modules/country-select-js/build/js/countrySelect.min.js"
-              
             ]
           }
         }
