--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.7.0",
     "ngx-flag-picker": "^14.0.0",
     "rxjs": "~7.8.0",
+    "sitemap": "^7.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
