--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.6",
     "@types/intl-tel-input": "^18.1.2",
     "bootstrap": "^5.2.3",
+    "compression": "^1.7.4",
     "country-select-js": "^2.1.0",
     "emailjs-com": "^3.2.0",
     "intl-tel-input": "^18.1.6",
