--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "node_modules/intl-tel-input/build/css/intlTelInput.css"
+              "node_modules/intl-tel-input/build/css/intlTelInput.css",
+              "src/fontawesome-free-6.5.1-web/css/all.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
